Update fmt.Println message from 'Hello' to 'Goodbye'

--- a/Swastik.html
+++ b/Swastik.html
@@ -120,7 +120,7 @@
                 <!-- Logo Section -->
                 <a href="#" class="flex items-center gap-3 group">
                     <div class="h-12 w-12 md:h-14 md:w-14 relative transition-transform duration-300 group-hover:scale-105">
-                        <img src="swastik_logo.png" alt="Swastik Dairy Logo" 
+                        <img src="SOF.png" alt="Swastik Dairy Logo" 
                              onerror="this.style.display='none'; document.getElementById('fallback-logo').style.display='flex';" 
                              class="h-full w-full object-contain hidden drop-shadow-sm" id="main-logo-img">
                         
@@ -367,7 +367,7 @@
             <form id="customer-form" onsubmit="submitCustomerDetails(event)" class="space-y-4 pb-2">
                 <div class="space-y-1">
                     <label class="text-sm font-semibold text-gray-700">Full Name</label>
-                    <input type="text" id="cust-name" required class="w-full px-4 py-3 rounded-xl bg-gray-50 border border-gray-200 focus:border-farm-green focus:bg-white outline-none transition" placeholder="John Doe">
+                    <input type="text" id="cust-name" required class="w-full px-4 py-3 rounded-xl bg-gray-50 border border-gray-200 focus:border-farm-green focus:bg-white outline-none transition" placeholder="Your Name">
                 </div>
                 <div class="space-y-1">
                     <label class="text-sm font-semibold text-gray-700">Phone Number</label>
@@ -516,7 +516,7 @@
                 id: 1,
                 name: "Fresh Farm Milk",
                 description: "Pure, unprocessed raw milk directly from healthy cows.",
-                image: "milk bucket.jpg",
+                image: "milk bottle.jpeg",
                 variants: [
                     { size: "1 Liter", price: 99 },
                     { size: "500 ml", price: 50 }
@@ -563,7 +563,7 @@
                 id: 5,
                 name: "Village Lassi",
                 description: "Refreshing traditional drink, lightly sweetened and chilled.",
-                image: "dahi.webp",
+                image: "lassi.jpeg",
                 variants: [
                     { size: "1 Liter", price: 45 },
                     { size: "500 ml", price: 25 },
@@ -819,4 +819,5 @@
         }
     </script>
 </body>
+
 </html>
