--- a/index.html
+++ b/index.html
@@ -88,10 +88,10 @@
             opacity: 1;
         }
 
-        /* Modern Modal Animation */
+        /* Modern Modal Animation - FIXED: Removed translate which was pushing modal off-screen */
         @keyframes modalEnter {
-            from { opacity: 0; transform: translate(-50%, -48%) scale(0.96); }
-            to { opacity: 1; transform: translate(-50%, -50%) scale(1); }
+            from { opacity: 0; transform: scale(0.95); }
+            to { opacity: 1; transform: scale(1); }
         }
 
         .modal-content {
@@ -119,12 +119,13 @@
 
                 <!-- Logo Section -->
                 <a href="#" class="flex items-center gap-3 group">
-                    <div class="h-12 w-12 md:h-14 md:w-14 relative transition-transform duration-300 group-hover:scale-105">
-                        <img src="SOF.png" alt="Swastik Dairy Logo" 
+                    <!-- Increased Logo Size -->
+                    <div class="h-16 w-16 md:h-20 md:w-20 relative transition-transform duration-300 group-hover:scale-105">
+                        <img src="swastik_logo.png" alt="Swastik Dairy Logo" 
                              onerror="this.style.display='none'; document.getElementById('fallback-logo').style.display='flex';" 
                              class="h-full w-full object-contain hidden drop-shadow-sm" id="main-logo-img">
                         
-                        <div id="fallback-logo" class="h-full w-full bg-farm-green rounded-xl flex items-center justify-center text-white text-2xl shadow-lg">
+                        <div id="fallback-logo" class="h-full w-full bg-farm-green rounded-xl flex items-center justify-center text-white text-3xl shadow-lg">
                             <i class="fa-solid fa-cow"></i>
                         </div>
                     </div>
@@ -367,7 +368,7 @@
             <form id="customer-form" onsubmit="submitCustomerDetails(event)" class="space-y-4 pb-2">
                 <div class="space-y-1">
                     <label class="text-sm font-semibold text-gray-700">Full Name</label>
-                    <input type="text" id="cust-name" required class="w-full px-4 py-3 rounded-xl bg-gray-50 border border-gray-200 focus:border-farm-green focus:bg-white outline-none transition" placeholder="Your Name">
+                    <input type="text" id="cust-name" required class="w-full px-4 py-3 rounded-xl bg-gray-50 border border-gray-200 focus:border-farm-green focus:bg-white outline-none transition" placeholder="John Doe">
                 </div>
                 <div class="space-y-1">
                     <label class="text-sm font-semibold text-gray-700">Phone Number</label>
@@ -516,7 +517,7 @@
                 id: 1,
                 name: "Fresh Farm Milk",
                 description: "Pure, unprocessed raw milk directly from healthy cows.",
-                image: "milk bottle.jpeg",
+                image: "image_465efc.png",
                 variants: [
                     { size: "1 Liter", price: 99 },
                     { size: "500 ml", price: 50 }
@@ -563,7 +564,7 @@
                 id: 5,
                 name: "Village Lassi",
                 description: "Refreshing traditional drink, lightly sweetened and chilled.",
-                image: "lassi.jpeg",
+                image: "image_4661bf.png",
                 variants: [
                     { size: "1 Liter", price: 45 },
                     { size: "500 ml", price: 25 },
@@ -583,7 +584,7 @@
                     ${product.tag ? `<div class="absolute top-4 left-4 bg-white/90 backdrop-blur-sm text-farm-green text-[10px] font-bold px-3 py-1.5 rounded-full z-10 shadow-sm uppercase tracking-wider border border-green-100">${product.tag}</div>` : ''}
                     
                     <div class="relative w-full pt-[80%] bg-gray-50 overflow-hidden">
-                        <img src="${product.image}" alt="${product.name}" onerror="this.src='https://placehold.co/400x400/10B981/ffffff?text=Image+Not+Found'" class="absolute top-0 left-0 w-full h-full object-cover group-hover:scale-110 transition duration-700">
+                        <img src="${product.image}" alt="${product.name}" onerror="this.src='https://placehold.co/400x400/10B981/ffffff?text=Image+Not+Found'" class="absolute top-0 left-0 w-full h-full object-contain p-2 group-hover:scale-110 transition duration-700">
                     </div>
 
                     <div class="p-6 flex flex-col flex-grow">
@@ -819,5 +820,4 @@
         }
     </script>
 </body>
-
 </html>
