Change output message from 'Hello World' to 'Goodbye World'

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                 <a href="#" class="flex items-center gap-3 group">
                     <!-- Increased Logo Size -->
                     <div class="h-16 w-16 md:h-20 md:w-20 relative transition-transform duration-300 group-hover:scale-105">
-                        <img src="swastik_logo.png" alt="Swastik Dairy Logo" 
+                        <img src="SOF.png" alt="Swastik Dairy Logo" 
                              onerror="this.style.display='none'; document.getElementById('fallback-logo').style.display='flex';" 
                              class="h-full w-full object-contain hidden drop-shadow-sm" id="main-logo-img">
                         
@@ -517,7 +517,7 @@
                 id: 1,
                 name: "Fresh Farm Milk",
                 description: "Pure, unprocessed raw milk directly from healthy cows.",
-                image: "image_465efc.png",
+                image: "milk bottle.jpeg",
                 variants: [
                     { size: "1 Liter", price: 99 },
                     { size: "500 ml", price: 50 }
@@ -564,7 +564,7 @@
                 id: 5,
                 name: "Village Lassi",
                 description: "Refreshing traditional drink, lightly sweetened and chilled.",
-                image: "image_4661bf.png",
+                image: "lassi.jpeg",
                 variants: [
                     { size: "1 Liter", price: 45 },
                     { size: "500 ml", price: 25 },
@@ -821,3 +821,4 @@
     </script>
 </body>
 </html>
+
