Update fmt.Println message from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ws<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -411,7 +411,7 @@
                 <!-- QR Card -->
                 <div class="bg-white p-4 rounded-2xl border border-gray-200 shadow-soft mx-auto w-64 relative mb-4">
                     <div class="aspect-square bg-gray-50 rounded-xl overflow-hidden mb-3 relative group">
-                        <img src="WhatsApp Image 2025-11-28 at 20.43.37.jpeg" 
+                        <img src="qr_code.jpeg" 
                              id="qr-image" 
                              alt="UPI QR Code" 
                              class="w-full h-full object-contain">
@@ -821,4 +821,5 @@
     </script>
 </body>
 </html>
+
 
